sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:10: error: not found: value triU
  while(tri && triU && triD)
               ^AlgCocktailSort3:10: error: not found: value triD
  while(tri && triU && triD)
                       ^AlgCocktailSort3:22: error: not found: value triU
    if(!triU)
        ^